feat(service): add Pageable support to PostService
- Add Pageable overloads for getPublishedPosts, searchPosts, getUserPosts, getPostsByCategory
- Maintain backward compatibility with int page/size methods
- Convert Page<Post> to Page<PostResponse> before mapping to PageResponse